Fixed dark mode bug
Fixed toggling dark mode so that when there's a new API call, dark mode will be applied to hex value text

--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
     box-sizing: border-box;
 }
 
+html,
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
+    overflow: hidden;
 }
 
 body.dark {
